Programming Guide: Add custom cover page for print version
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -14,19 +14,7 @@
   \usepackage{hyperref}
 \fi
 
-\title{Equalizer Programming Guide}
-\author{Eyescale Software GmbH}
-
-\date{
-  \vspace{2cm}
-  \begin{figure}[ht]
-    \hspace{-4.5cm}\includegraphics[width=22cm]{images/teaser.pdf}
-  \end{figure}
-  \vspace{1cm}
-%  \textbf{RELEASE CANDIDATE}\\[\medskipamount]
-  Version 1.1.12 for Equalizer 0.5-RC\\[\medskipamount]
-  \today
-}
+\include{title}
 
 \newcommand{\tm}{\texttrademark~}
 \newcommand{\rc}{\raise 1ex\hbox{{\tiny\textregistered}}~}
@@ -2907,7 +2895,6 @@ channel. \fig{fVolResult} shows the result of the composition from
 
 The assembly algorithm described in this section also works with parallel
 compositing algorithms such as direct-send. 
-
 
 \if 0
 {\footnotesize\begin{lstlisting}
