--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -24,7 +24,7 @@
   \end{figure}
   \vspace{1cm}
 %  \textbf{RELEASE CANDIDATE}\\[\medskipamount]
-  Version 1.2 for Equalizer 0.5\\[\medskipamount]
+  Version 1.3.1 for Equalizer 0.5+svn\\[\medskipamount]
   \today
 }
 
@@ -106,6 +106,7 @@ right].
     \hline
     1.0     & Oct 28, 2007 & Initial Version for Equalizer 0.4\\
     1.2     & Apr 15, 2008 & Version for Equalizer 0.5\\
+    1.3.1   & May 02, 2008 & Add statistics, improved images based on 1.2 print\\
     \hline
   \end{tabularx}}
 \thispagestyle{empty}
@@ -1986,10 +1987,10 @@ void Channel::_drawModel( const Model* model )
 \end{lstlisting}}
 
 \begin{wrapfigure}{r}{.618\textwidth}
-  \vspace{-2em}
+  \vspace{-1.5em}
   \includegraphics[width=.618\textwidth]{images/render.pdf}
   {\caption{\small\label{fRender}Main Rendering Loop}}
-  \vspace{-2em}
+  \vspace{-1.5em}
 \end{wrapfigure}
 The model data is spatially organized in an 3-dimensional
 kD-tree\footnote{See also \link{http://en.wikipedia.org/wiki/Kd-tree}}
@@ -2088,7 +2089,7 @@ from the Equalizer distribution are used to illustrate one use case of
 the feature.
 
 
-\subsection{Event Handling}
+\subsection{\label{sEventHandling}Event Handling}
 
 Event handling requires a lot of flexibility. On one hand, the
 implementation differs slightly for each operating and window system due
@@ -2654,11 +2655,11 @@ Equalizer.
 
 \begin{figure}[h!t]
   \subfigure[]{\label{fMono}
-    \includegraphics[height=3cm]{images/mono}}\hfil
+    \includegraphics[height=3.5cm]{images/mono}}\hfil
   \subfigure[]{\label{fStereo}
-    \includegraphics[height=3cm]{images/stereo}}\hfil
+    \includegraphics[height=3.5cm]{images/stereo}}\hfil
   \subfigure[]{\label{fTracked}
-    \includegraphics[height=3cm]{images/tracked}}%
+    \includegraphics[height=3.5cm]{images/tracked}}%
   {\caption{\small\label{fImmersive}Monoscopic, Stereoscopic and Tracked
     frustra}}
 \end{figure}
@@ -2888,6 +2889,106 @@ channel. \fig{fVolResult} shows the result of the composition from
 
 The assembly algorithm described in this section also works with parallel
 compositing algorithms such as direct-send. 
+
+
+\subsection{Statistics}
+
+\subsubsection{Statistics Gathering}
+
+Statistics are measured in milliseconds since the configuration was
+initialized. On each node, the global configuration clock is reset at
+the same time by the server during \textsf{Config::init}. Each statistic
+event records the originator's (channel, window or config) unique
+identifier.
+
+Statistics are enabled per entity using an attribute hint. The hint
+determines how precise the gathered statistics are. When set to
+\textsf{fastest}, the per-frame clock is sampled directly when the event
+occurs. When set to \textsf{nicest}, all OpenGL commands will be
+finished before sampling the event. This incurs a performance penalty,
+but gives more correct results. The default setting is fastest in
+release builds, and nicest in debug builds.
+
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/statistics.png}
+  {\caption{\small\label{fStatistics}Statistics for a two-node 2D compound}}
+\end{wrapfigure}
+The events are processed by the channel's and window's
+\textsf{processEvent} method. The default implementation sends these
+events to the config, using \textsf{Config::sendEvent}, as explained in
+\sref{sEventHandling}. When the default implementation of
+\textsf{Config::handleEvent} receives the statistics event, it sorts the
+event per frame and per originator. When a frame has been finished, the
+events are pushed to the local (app-)node for visualization.
+
+\fig{fStatistics} shows the visualization of statistics events in an
+overlay\footnote{3D model courtesy Stanford University Computer Graphics
+  Laboratory.}.
+
+\subsubsection{Statistics Overlay}
+
+In debug builds, a statistics overlay using the gathered statistics
+events is rendered directly before \textsf{Window::swapBuffers}. The
+overlay rendering method, \textsf{Channel::drawStatistics}, can be
+called directly to render the overlay. It can also be overwritten by a
+custom implementation.
+
+\begin{figure}[h!t]
+  \includegraphics[width=\textwidth]{images/statisticsDetail.pdf}
+    {\caption{\small\label{fStatisticsDetail}Annotated Detail of the
+        Statistics from \fig{fStatistics}.}}
+\end{figure}
+
+\fig{fStatisticsDetail} shows a detail view of \fig{fStatistics},
+together with some annotations for the overlay. The statistics shown are
+for a two-node 2D compound. The destination channel is on the
+\textsf{appNode} and contributes to the rendering.
+
+This compound executes two \textsf{Channel::frameDraw} tasks, one
+\textsf{Channel::frame\-Read\-back} task on the remote node and one
+\textsf{Channel::frameAssemble} task on the local node.
+
+The X axis is the time. One pixel on the screen corresponds to one
+millisecond. The right-most pixel is the most current time. On the Y
+axis are the rendering entities: channels, windows and the config. The
+upper channel is the local channel since it executes
+\textsf{frameAssemble}, and the lower channel is the remote channel,
+executing {frameReadback}.
+
+The remote machine is a Mac Mini, the local a MacBook Pro. The draw
+times are unbalanced due to the speed difference of the machines, and
+the transmit time is relatively long since 100 MBit Ethernet was used.
+
+In order to facilitate the understanding, subsequent frames alternate in
+brightness. The right-most, current frame is brighter than the
+frame-before-last.
+
+The configuration used has a latency of one frame. Consequently, the
+execution of two frames overlaps. This can be observed in the early
+execution of the remote channel's \textsf{frameDraw}, which starts while
+the local channel is still assembling the previous frame.
+
+The beginning of a frame is marked by a vertical green line, and the end
+of a frame by a vertical gray line. These lines also alternate in
+brightness. The brightness and color matches the event for
+\textsf{Config::startFrame} and \textsf{Config::finishFrame},
+respectively. The event for \textsf{startFrame} is typically not
+visible, since it takes less than one millisecond to execute. If no idle
+processing is done by the application, the event for
+\textsf{finishFrame} occupies a full frame, since the config is blocked
+here waiting for the frame to complete.
+
+In the above example, the local channel finishes drawing the frame
+early, and therefore spends a considerable amount of time waiting for
+the input frame from the remote channel. These wait events, rendered
+red, are a sub-event of the yellow \textsf{frameAssemble} task.
+
+The white \textsf{Window::swapBuffers} task takes also a long time in
+debug builds, since the execution of the swap buffer is locked to the
+vertical retrace of the display, and enforced by \textsf{glFinish}
+before sampling the end time of the event. In release builds, this does
+not happen and all OpenGL commands are pipelined with the execution on
+the CPU.
 
 \if 0
 {\footnotesize\begin{lstlisting}
