--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -24,7 +24,7 @@
   \end{figure}
   \vspace{1cm}
 %  \textbf{RELEASE CANDIDATE}\\[\medskipamount]
-  Version 1.3.1 for Equalizer 0.5+svn\\[\medskipamount]
+  Version 1.3.2 for Equalizer 0.5+svn\\[\medskipamount]
   \today
 }
 
@@ -56,7 +56,8 @@
 \subsection*{Contributors}
 
 Written by Stefan Eilemann.\\
-Engineering contributions by Maxim Makhinya, Jonas B\"osch and Christian Marten.
+Engineering contributions by Maxim Makhinya, Jonas B\"osch, Christian
+Marten and Patrick Bouchaud.
 
 \subsection*{Copyright}
 
@@ -107,6 +108,7 @@ right].
     1.0     & Oct 28, 2007 & Initial Version for Equalizer 0.4\\
     1.2     & Apr 15, 2008 & Version for Equalizer 0.5\\
     1.3.1   & May 02, 2008 & Add statistics, improved images based on 1.2 print\\
+    1.3.2   & May 05, 2008 & Add network distribution on eqPly model data\\
     \hline
   \end{tabularx}}
 \thispagestyle{empty}
@@ -986,17 +988,13 @@ Distributed objects are created by subclassing from
 \textsf{eqNet::Object}. Distributed objects can be static (immutable) or
 dynamic. Dynamic objects are versioned.
 
-The \textsf{eqPly} example has a static distributed object to provide
-initial data to all rendering nodes, as well as a versioned object to
-provide frame-specific data such as the camera position to the
-rendering methods.
+The \textsf{eqPly} example uses static distributed objects to provide
+initial data and the model to all rendering nodes, as well as a
+versioned object to provide frame-specific data such as the camera
+position to the rendering methods.
 
-\subsubsection{Object Usage for Rendering}
+\subsubsection{Common Usage}
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/objects.pdf}
-  {\caption{\small\label{fObjects}Distributed Data Handling}}
-\end{wrapfigure}
 Distributed objects are addressed using session-unique identifiers,
 because pointers to other objects can not be distributed directly, since
 they have no meaning on remote nodes. The session with which distributed
@@ -1006,7 +1004,7 @@ The shared data entry point for the render clients is the identifier
 passed by the application to \textsf{Config::init}. This identifier
 typically contains the identifier of a static distributed object, and is
 passed by Equalizer to all \textsf{configInit} task methods. Normally
-this initial object is mapped by the \textsf{eq::Node}, and contains
+this initial object is mapped by the render clients, and it contains
 identifiers to other shared data objects.
 
 The distributed data objects referenced by the initial data object are
@@ -1019,28 +1017,11 @@ data, e.g., the global camera data, is versioned. The frame data
 identifier is passed in the initial data, and the frame data version is
 passed with each start frame request.
 
-Applications distributing their scene graph, rather then relying on a
-shared filesystem like \textsf{eqPly}, use the frame data also as an
-entry point to their scene graph data structure. \fig{fObjects} shows
-one possible implementation, where the identifier and version of the
-scene graph root are transported using the frame data. The scene graph
-root then serializes and de-serializes his immediate children by
-transferring their identifier and current version.
-
-The objects are still created by the application, and then registered or
-mapped with the session in order to distribute them. When mapping
-objects in a hierarchical data structure, their type often has to be
-known in order to create them. Equalizer does not currently provide
-object typing, this has to be done by the application, either implicitly
-in the current implementation context, or by transferring a type
-identifier. In \textsf{eqPly}, object typing is implicit since it is
-well-defined which object is mapped in which task method.
-
 \subsubsection{Change Handling}
 
 The way changes are to be handled is determined by calling
 \textsf{Object::getChangeType} during the registration of the master
-version of a distributed object . The change type determines the memory
+version of a distributed object. The change type determines the memory
 footprint and the contract for calling the serialization methods. The
 following change types are possible:
 
@@ -1089,12 +1070,14 @@ implemented in the data streams:
 {\footnotesize\begin{lstlisting}
 void InitData::getInstanceData( eqNet::DataOStream& os )
 {
-    os << _frameDataID << _windowSystem << _useVBOs << _useGLSL << _filename;
+    os << _frameDataID << _modelID << _windowSystem << _useVBOs << _useGLSL
+       << _invFaces ;
 }
 
 void InitData::applyInstanceData( eqNet::DataIStream& is )
 {
-    is >> _frameDataID >> _windowSystem >> _useVBOs >> _useGLSL >> _filename;
+    is >> _frameDataID >> _modelID >> _windowSystem >> _useVBOs >> _useGLSL
+       >> _invFaces;
 
     EQASSERT( _frameDataID != EQ_ID_INVALID );
     EQINFO << "New InitData instance" << endl;
@@ -1152,6 +1135,106 @@ care of the distribution of the data:
                 EQINFO << "New FrameData " << std::endl;
             }
 \end{lstlisting}}%>>
+
+\subsubsection{\label{sSceneData}Scene Data}
+
+Some applications might rely on a shared filesystem to access the data,
+for example when out-of-core algorithms are used. Other applications
+prefer to load the data only on the application process, and use
+distributed objects to synchronize the scene data with the render
+clients.
+
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/modelDist.pdf}
+  {\caption{\small\label{fModelDist}Scene Data in eqPly}}
+\end{wrapfigure}
+\textsf{eqPly} uses static distributed objects to distribute the model
+loaded by the application. This model can be easily extended to
+versioned objects, in order to support dynamic data changes.
+
+The kD-tree data structure and rendering code for the model is strongly
+separated from Equalizer, and kept in the separate namespace
+\textsf{mesh}. It could also be used in a GLUT application. To keep this
+separation, an external 'mirror' hierarchy is constructed around the
+tree. This hierarchy of \textsf{VertexBufferDist} nodes is responsible
+for cloning the model data on the remote render clients.
+
+The identifer of the root object of this distributed hierarchy is passed
+as part of the \textsf{InitData}, and used during remote node
+initialization to map the model. \fig{fModelDist} shows the UML
+hierarchy of the model and distribution classes.
+
+Each \textsf{VertexBufferDist} object has one node of the model's data
+tree. It is serializing the data for this node. Furthermore, it mirrors
+the kD-tree by having a \textsf{VertexBufferDist} child for each child
+of its corresponding tree node. During serialization, the identifier of
+these children is sent to the remote nodes, which reconstruct the mirror
+distribution hierarchy and model data tree based on this data.
+
+The serialization function \textsf{getInstanceData} sends all the data
+needed to reconstruct the model tree: the object identifiers of its
+children, vertex data for the tree root and vertex indices for the leaf
+nodes, as well as the bounding sphere and database range of each
+node. The deserialization function \textsf{applyInstanceData} retrieves
+the data in multiple steps, and constructs the model tree on the fly
+based on this information. It is omitted here for brevity:
+
+
+{\footnotesize\begin{lstlisting}
+void VertexBufferDist::getInstanceData( eqNet::DataOStream& os )
+{
+    EQASSERT( _node );
+    os << _isRoot;
+
+    if( _left && _right )
+    {
+        os << _left->getID() << _right->getID();
+
+        if( _isRoot )
+        {
+            EQASSERT( _root );
+            const mesh::VertexBufferData& data = _root->_data;
+            
+            os << data.vertices << data.colors << data.normals << data.indices;
+        }
+    }
+    else
+    {
+        os << EQ_ID_INVALID << EQ_ID_INVALID;
+
+        EQASSERT( dynamic_cast< const mesh::VertexBufferLeaf* >( _node ));
+        const mesh::VertexBufferLeaf* leaf = 
+            static_cast< const mesh::VertexBufferLeaf* >( _node );
+
+        os << leaf->_vertexStart << leaf->_vertexLength << leaf->_indexStart
+           << leaf->_indexLength;
+    }
+
+    os << _node->_boundingSphere << _node->_range;
+}
+\end{lstlisting}}%>>
+
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/objects.pdf}
+  {\caption{\small\label{fObjects}Distributed Data Handling}}
+\end{wrapfigure}
+Applications distributing a dynamic scene graph use the frame data
+instead of the init data as the entry point to their scene graph data
+structure. \fig{fObjects} shows one possible implementation, where the
+identifier and version of the scene graph root are transported using the
+frame data. The scene graph root then serializes and de-serializes his
+immediate children by transferring their identifier and current version,
+similar to the static distribution done by \textsf{eqPly}.
+
+The objects are still created by the application, and then registered or
+mapped with the session in order to distribute them. When mapping
+objects in a hierarchical data structure, their type often has to be
+known in order to create them. Equalizer does not currently provide
+object typing, this has to be done by the application, either implicitly
+in the current implementation context, or by transferring a type
+identifier. In \textsf{eqPly}, object typing is implicit since it is
+well-defined which object is mapped in which context.
+
 
 \subsection{Config}
 
@@ -1212,7 +1295,7 @@ If the configuration was initialized correctly, the configuration tries
 to set up a tracking device for head tracking. Equalizer does not
 provide extensive support for tracking devices, as this is an orthogonal
 problem to parallel rendering. Tracking device support has already been
-solved by a number of implementations\footnote{VRCO Trackd, VRPN, etc.},
+solved by a number of implementations\footnote{VRCO Trackd VRPN, etc.},
 which can easily be integrated with Equalizer. The example code in
 \textsf{eqPly} provides a reference implementation for the integration
 of such a tracking library. \sref{sTracking} provides more background on
@@ -1370,51 +1453,80 @@ created on the appropriate machine. Nodes are only instantiated on their
 render client processes, i.e., each process should only have one
 instance of the \textsf{eq::Node} class. The application process might
 also have a node class, which is handled in exactly the same way as the
-render client nodes.
+render client nodes. The application and render clients might use a
+different node factory, instantiating a different type of \textsf{eq::Node}.
 
-During node initialization the init data is mapped to a local instance
-using the identifier passed from \textsf{Config::init}. The model is
-loaded based on the filename in the initialization data. No pipe, window
-or channel tasks methods are executed before \textsf{Node::configInit}
-has returned.
+During node initialization the static, per-config data is mapped to a
+local instance using the identifier passed from
+\textsf{Config::init}. No pipe, window or channel tasks methods are
+executed before \textsf{Node::configInit} has returned.
 
 {\footnotesize\begin{lstlisting}
 bool Node::configInit( const uint32_t initID )
 {
-    eq::Config* config = getConfig();
-    const bool  mapped = config->mapObject( &_initData, initID );
-    EQASSERT( mapped );
+    if( !eq::Node::configInit( initID ))
+        return false;
 
-    const string& filename = _initData.getFilename();
-    EQINFO << "Loading model " << filename << endl;
-
-    _model = new Model();
-    if ( !_model->readFromFile( filename.c_str() ) )
-    {
-        EQWARN << "Can't load model: " << filename << endl;
-        delete _model;
-        _model = 0;
-    }
-    
-    return eq::Node::configInit( initID );
-}
-\end{lstlisting}}%>>
-
-The node config exit function deletes the loaded model and unmaps the
-initialization data: 
-
-{\footnotesize\begin{lstlisting}
-bool Node::configExit()
-{
-    delete _model;
-    _model = NULL;
-
-    eq::Config* config = getConfig();
-    config->unmapObject( &_initData );
-
-    return eq::Node::configExit();
+    Config*    config = static_cast< Config* >( getConfig( ));
+    return config->mapData( initID );
 }
 \end{lstlisting}}
+
+The actual mapping of the static data is done by the config. The config
+first retrieves the distributed \textsf{InitData}. The object is
+directly unmapped since it is static, and the data has be retrieved.
+
+The init data contains, among other things, the identifier of the
+root of the model's kD-tree. Using this identifier, the model is mapped
+to the node, as explained in \sref{sSceneData}:
+
+{\footnotesize\begin{lstlisting}
+bool Config::mapData( const uint32_t initDataID )
+{
+    if( _initData.getID() == EQ_ID_INVALID )
+    {
+        const bool mapped = mapObject( &_initData, initDataID );
+        EQASSERT( mapped );
+        unmapObject( &_initData ); // data was retrieved, unmap immediately
+    }
+    else  // appNode, _initData is registered already
+        EQASSERT( _initData.getID() == initDataID );
+
+    const uint32_t modelID = _initData.getModelID();
+    if( modelID == EQ_ID_INVALID ) // no model loaded by application
+        return true;
+
+    if( !_model )
+        _model = ModelDist::mapModel( this, modelID );
+
+    return (_model != 0);
+}
+\end{lstlisting}}
+
+Since the model data is static, the mirror tree for data distribution
+is only created temporarily to retrieve the data. This is done in a
+static function of the \textsf{VertexBufferDist} class. One instance of
+the distribution class is mapped to the model's identifier. During
+application of the instance data, it will map its children recursively:
+
+
+{\footnotesize\begin{lstlisting}
+mesh::VertexBufferRoot* VertexBufferDist::mapModel(eqNet::Session* session,
+                                                   const uint32_t modelID )
+{
+    VertexBufferDist modelDist( 0, 0 );
+
+    if( !session->mapObject( &modelDist, modelID ))
+    {
+        EQWARN << "Mapping of model failed" << endl;
+        return 0;
+    }
+
+    modelDist._unmapTree(); // No longer needed    
+
+    return const_cast< mesh::VertexBufferRoot* >( modelDist._root );
+}
+\end{lstlisting}}%>>
 
 The two remaining functions in the node relax the thread synchronization
 between the node and pipe threads, since all dynamic data is
@@ -1461,8 +1573,8 @@ the display connection is opened.
 {\footnotesize\begin{lstlisting}
 bool Pipe::configInit( const uint32_t initID )
 {
-    const Node*     node        = static_cast<Node*>( getNode( ));
-    const InitData& initData    = node->getInitData();
+    const Config*     config    = static_cast<Config*>( getConfig( ));
+    const InitData& initData    = config->getInitData();
     const uint32_t  frameDataID = initData.getFrameDataID();
     eq::Config*     config      = getConfig();
 
@@ -1510,8 +1622,8 @@ window system, if supported:
 {\footnotesize\begin{lstlisting}
 eq::WindowSystem Pipe::selectWindowSystem() const
 {
-    const Node*            node     = static_cast<Node*>( getNode( ));
-    const InitData&        initData = node->getInitData();
+    const Config*            config = static_cast<Config*>( getConfig( ));
+    const InitData&        initData = config->getInitData();
     const eq::WindowSystem ws       = initData.getWindowSystem();
 
     if( ws == eq::WINDOW_SYSTEM_NONE )
@@ -1591,14 +1703,14 @@ drawable and context were created successfully, \textsf{configInit} calls
 state initialization. The default implementation sets up some typical
 OpenGL state, e.g., it enables the depth test.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/windowInit.pdf}
+  {\caption{\small\label{fWindowInit}Window Initialization}}
+\end{wrapfigure}
 \fig{fWindowInit} shows a flow chart of the window initialization. The
 colored functions are task methods and can be replaced by
 application-specific implementations.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/windowInit.pdf}
-  {\caption{\small\label{fWindowInit}Window Initialization}}
-\end{wrapfigure}
 The window-system specific initialization takes into account various
 attributes set in the configuration file. Attributes include the size of
 the various frame buffer planes  (color, alpha, depth, stencil) as well
@@ -1629,8 +1741,8 @@ bool Window::configInitGL( const uint32_t initID )
     {
         _state = new VertexBufferState( glewGetContext( ));
 
-        const Node*     node     = static_cast< const Node* >( getNode( ));
-        const InitData& initData = node->getInitData();
+        const Config*   config   = static_cast< const Config* >( getConfig( ));
+        const InitData& initData = config->getInitData();
 
         if( initData.useVBOs() )
         {
@@ -1878,10 +1990,6 @@ void Channel::frameDraw( const uint32_t frameID )
     eq::Channel::frameDraw( frameID );
 \end{lstlisting}}
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/DB.png}
-  {\caption{\small\label{fDB}Destination view of an DB compound}}
-\end{wrapfigure}
 After the basic view setup, a directional light is configured, and the
 model is positioned using the camera parameters from the frame data. The
 camera parameters are transported using the the frame data to ensure
@@ -1915,9 +2023,9 @@ configuration:
                   frameData.data.translation.z );
     glMultMatrixf( frameData.data.rotation.ml );
 
-    Node*            node  = (Node*)getNode();
-    const Model*     model = node->getModel();
-    const eq::Range& range = getRange();
+    Config*          config = static_cast< Config* >( getConfig( ));
+    const Model*     model  = config->getModel();
+    const eq::Range& range  = getRange();
 
     if( !range.isFull( )) // Color DB-patches
     {
@@ -1954,6 +2062,10 @@ its place:
 }
 \end{lstlisting}}
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/DB.png}
+  {\caption{\small\label{fDB}Destination view of a DB compound}}
+\end{wrapfigure}
 In order to draw the model, a helper class for view frustum culling is
 set up using the view frustum from Equalizer and the camera position
 from the frame data. The frustum helper computes the six frustum planes
@@ -1987,10 +2099,8 @@ void Channel::_drawModel( const Model* model )
 \end{lstlisting}}
 
 \begin{wrapfigure}{r}{.618\textwidth}
-  \vspace{-1.5em}
   \includegraphics[width=.618\textwidth]{images/render.pdf}
   {\caption{\small\label{fRender}Main Rendering Loop}}
-  \vspace{-1.5em}
 \end{wrapfigure}
 The model data is spatially organized in an 3-dimensional
 kD-tree\footnote{See also \link{http://en.wikipedia.org/wiki/Kd-tree}}
@@ -2291,10 +2401,6 @@ process and executes the \textsf{main} function. The application and
 render clients initialize the local node for communications with other
 nodes, including the server, using \textsf{Client::initLocal}.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/threads.pdf}
-  {\caption{\small\label{fThreads}Threads within one node process}}
-\end{wrapfigure}
 During this initialization, Equalizer creates and manages two threads
 for communication, the receiver thread and the command thread. Normally
 no application code is executed from these two threads.
@@ -2303,6 +2409,10 @@ The receiver thread manages the network connections to other nodes and
 receives data. It dispatches the received data either to the application
 threads, or to the command thread.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/threads.pdf}
+  {\caption{\small\label{fThreads}Threads within one node process}}
+\end{wrapfigure}
 The command thread processes Equalizer-related request from other nodes,
 for example during \textsf{eqNet::Object} mapping. In some special cases
 the command thread executes application code, for example when a remote
@@ -2330,6 +2440,10 @@ rendering, and safe modifications of this database are possible from the
 node thread, since the pipe threads do not execute any rendering tasks
 between frames.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/frameSync.pdf}
+  {\caption{\small\label{fFrameSync}Per-Node Frame Synchronization}}
+\end{wrapfigure}
 Please note that the default thread synchronization synchronizes all
 \textsf{Channel::frame\-Draw} operations on a \textbf{single} node with
 the node's main thread. The per-node frame synchronization does not
@@ -2348,17 +2462,13 @@ thread.
 
 Each entity uses \textsf{waitFrameStarted} to block on the parent's
 \textsf{startFrame}, e.g., \textsf{Pipe::\-frame\-Start} calls
-\textsf{Node::waitFrameStarted} to wait for the corresponding
+\textsf{Node::wait\-Frame\-Started} to wait for the corresponding
 \textsf{Node::start\-Fra\-me}. This explicit synchronization allows to
 update non-critical data before synchronizing with
 \textsf{waitFrameStarted}, or after unlocking using
 \textsf{start\-Fra\-me}. \fig{fFrameSync} illustrates this
 synchronization model.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/frameSync.pdf}
-  {\caption{\small\label{fFrameSync}Per-Node Frame Synchronization}}
-\end{wrapfigure}
 At the end of the frame, two similar sets of synchronization methods are
 used. The first set synchronizes the local execution, while the second
 set synchronizes the global execution.
@@ -2806,11 +2916,6 @@ and images.
 
 \subsubsection{Custom Assembly in eVolve}
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/slices.pdf}
-  {\caption{\small\label{fSlices}Blending Slices in 3D-Texture-based
-      Volume Rendering}}
-\end{wrapfigure}
 The \textsf{eVolve} example is a scalable volume renderer. It uses 3D
 texture-based volume rendering, where the 3D texture is intersected by
 view-aligned slices. The slices are rendered back-to-front and blended
@@ -2822,6 +2927,11 @@ When using 2D (sort-first) or stereo decompositions, no special
 programming is needed to achieve good scalability, as \textsf{eVolve} is
 mostly fill-limited and therefore scales nicely in these modes. 
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/slices.pdf}
+  {\caption{\small\label{fSlices}Blending Slices in 3D-Texture-based
+      Volume Rendering}}
+\end{wrapfigure}
 The full power of scalable volume rendering is however in DB (sort-last)
 compounds, where the full volume is divided into separate bricks. Each
 of the bricks is rendered like a separate volume. For recomposition, the
@@ -2834,10 +2944,6 @@ through the full texture. Therefore they have to be blen\-ded
 back-to-front in the same way as the slice planes are blended during
 rendering.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/volResult.png}
-  {\caption{\small\label{fVolResult}Result of \fig{fBlendPerspective}}}
-\end{wrapfigure}
 DB compounds have the advantage of scaling any part of the volume
 rendering pipeline: texture and main memory (smaller bricks for each
 channel), fill rate (less samples per channel) and IO bandwidth for
@@ -2845,6 +2951,13 @@ time-dependent data (less data per time step and channel). Since the
 amount of texture memory needed for each node decreases linearly, they
 make it possible to render data sets which are not feasible to
 visualize with any other approach.
+
+For recomposition, the 2D frame buffer contents are blended together to
+form a seamless picture. For correct blending, the frames are ordered in
+the same back-to-front order as the slices used for rendering, and use the
+same blending parameters. Simplified, the frame buffer images are
+`thick' slices which are `rendered' by writing their content to the
+destination frame buffer using the correct order. 
 
 \begin{figure}[h!t]
   \subfigure[]{\label{fBlendOrtho}
@@ -2856,13 +2969,6 @@ visualize with any other approach.
   {\caption{\small\label{fBlend}Back-to-Front Com\-po\-siting for
       Orthogonal and Perspective View Frustra}}
 \end{figure}
-For recomposition, the 2D frame buffer contents are blended together to
-form a seamless picture. For correct blending, the frames are ordered in
-the same back-to-front order as the slices used for rendering, and use the
-same blending parameters. Simplified, the frame buffer images are
-`thick' slices which are `rendered' by writing their content to the
-destination frame buffer using the correct order. 
-
 For orthographic rendering, determining the compositing order of the
 input frames is trivial. The screen-space orientation of the volume
 bricks determines the order in which they have to be composited. The
@@ -2871,6 +2977,10 @@ dimension. Therefore the range of the resulting frame buffer images,
 together with the sorting order, is used to arrange the frames during
 compositing. \fig{fBlendOrtho} shows this composition for one view.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/volResult.png}
+  {\caption{\small\label{fVolResult}Result of \fig{fBlendPerspective}}}
+\end{wrapfigure}
 Finding the correct assembly order for perspective frustra is more
 complex. The perspective distortion invalidates a simple orientation
 criteria like the one used for orthographic frustra. For the view and
@@ -2901,6 +3011,10 @@ the same time by the server during \textsf{Config::init}. Each statistic
 event records the originator's (channel, window or config) unique
 identifier.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/statistics.png}
+  {\caption{\small\label{fStatistics}Statistics for a two-node 2D compound}}
+\end{wrapfigure}
 Statistics are enabled per entity using an attribute hint. The hint
 determines how precise the gathered statistics are. When set to
 \textsf{fastest}, the per-frame clock is sampled directly when the event
@@ -2909,10 +3023,6 @@ finished before sampling the event. This incurs a performance penalty,
 but gives more correct results. The default setting is fastest in
 release builds, and nicest in debug builds.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/statistics.png}
-  {\caption{\small\label{fStatistics}Statistics for a two-node 2D compound}}
-\end{wrapfigure}
 The events are processed by the channel's and window's
 \textsf{processEvent} method. The default implementation sends these
 events to the config, using \textsf{Config::sendEvent}, as explained in
